--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Démo de la vidéo</title>
+    <title>Démo Form Automation</title>
 </head>
 <body>
-    <h1>Vidéo de démonstration</h1>
+    <h1>Vidéo de démonstration : Form Automation</h1>
     <video width="640" height="360" controls>
-        <source src="video.mp4" type="video/mp4">
+        <source src="Video_preview.mp4" type="video/mp4">
         Votre navigateur ne supporte pas la balise vidéo.
     </video>
 </body>
